--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,26 @@ on:
       - main
 jobs:
   say_hello:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
       - name: print hello world
         run: echo "hello world"
+
+
+
+# name: deploy to vercel
+# on:
+#   push:
+#       branches:
+#         -main
+
+# jobs:
+#   build_and_deploy: 
+#     runs-on: ubuntu_latest
+#     steps:
+#     - uses: action/checkout@v2 
+#     - name : install dependencies
+#       run : npm install
+
+#     - name: build
+#     - run: npm run build 
